# SENTINEL

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  action.yml  alembic.ini  gui_scanner.py  pyproject.toml  quick-setup.sh  requirements.txt  scanner.py  web_app.py
.github/workflows/: ci.yml
config/: scanner_config.json
docker/: docker-compose.yml  prometheus.yml
docs/: API_REFERENCE.md  EXTERNAL_TOOLS.md  PLUGIN_DEVELOPMENT.md  PROJECT_PRESENTATION.md  SOCIAL_MEDIA_POST.md
migrations/: env.py
src/: __init__.py  cli.py
src/api/: __init__.py  app.py
src/api/middleware/: __init__.py  auth.py  rate_limit.py
src/api/schemas/: __init__.py
src/api/v1/: __init__.py
src/core/: __init__.py  auth_manager.py  celery_app.py  chain_analyzer.py  config.py  cvss.py  distributed_scanner.py  exceptions.py  http_client.py  payload_manager.py  scan_repository.py  scan_templates.py  scanner_engine.py  tamper_engine.py  tasks.py
src/core/cache/: __init__.py  redis_cache.py
src/core/database/: __init__.py  models.py  session.py
src/core/security/: __init__.py  auth.py  secrets.py
src/data/payloads/: attack_library.json
src/modules/: __init__.py  api_scanner.py  auth_scanner.py  base_scanner.py  broken_access_control_scanner.py  cloud_scanner.py  command_injection_scanner.py  cors_scanner.py  csrf_scanner.py  dependency_scanner.py  deserialization_scanner.py  directory_scanner.py  exception_scanner.py  gobuster_scanner.py  graphql_scanner.py  grpc_scanner.py  hash_cracker.py  headers_scanner.py  js_secrets_scanner.py  jwt_scanner.py  lfi_rfi_scanner.py  logging_scanner.py  mobile_api_scanner.py  nikto_scanner.py  nmap_scanner.py  open_redirect_scanner.py  port_scanner.py  proto_pollution_scanner.py  protocol_scanner.py  race_condition_scanner.py  rate_limit_scanner.py  recon_scanner.py  recursive_scanner.py  robots_txt_scanner.py  security_misconfig_scanner.py  security_txt_scanner.py  sqli_exploiter.py  sqli_scanner.py  sse_scanner.py  ssi_scanner.py  (+12 more)
src/payloads/: __init__.py  sqli_payloads.py  wordlists.py  xss_payloads.py
src/plugins/: __init__.py  example_plugin.py  manager.py
src/reporting/: __init__.py  ai_narrator.py  formatters.py  poc_generator.py  sarif_formatter.py  smart_summary.py  templates.py
src/utils/: adv_logger.py  command_runner.py  evasion.py  fuzzing.py  metrics.py  payloads.py  proxy.py  scoring.py  waf_bypass.py
tests/: conftest.py  test_scanner.py
tests/integration/: system_check.py
tests/unit/: test_advanced_modules.py  test_auth.py  test_chain_analyzer.py  test_core_components.py  test_new_modules.py  test_poc_chains.py  test_reporting_smart.py  test_sqli_scanner.py
web/: index.html
web/static/css/: style.css
web/static/js/: main.js
wordlists/: README.md  api-endpoints-modern.txt  api-endpoints.txt  backup-files-modern.txt  backup-files.txt  directories.txt  passwords.txt  security-headers.txt  sqli-payloads-modern.txt  sqli-payloads.txt  subdomains-modern.txt  subdomains.txt  user-agents.txt  web-content-modern.txt  webshell_signatures.txt  xss-payloads-modern.txt  xss-payloads.txt
